Implement media transfer and ChatGPT